2005-03-07  Nathaniel Smith  <njs@codesourcery.com>

	* lua.cc (monotone_spawn_for_lua): Minimal change to get arguments
	in right order.  Still needs hygienic cleanups...
	* tests/t_can_execute.at: Run 'cp' instead of 'touch', because cp
	will actually notice if we pass arguments out of order.
	* testsuite.at: Remove mysterious blank line.
	
2005-03-07  Nathaniel Smith  <njs@codesourcery.com>

	* unix/process.cc (process_spawn): Log command line before
	executing.

2005-03-07  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (kill_redundant_edges): Rename back to...
	(kluge_for_3_ancestor_nodes): ...this.  Go back to only cleaning
	up parents of 3+ parent nodes.
	(analyze_manifest_changes): Take a third argument, of files whose
	ancestry needs splitting.
	(construct_revision_from_ancestry): Make more more complex, in
	order to properly track file identity in merges.

2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (check_sane_history): Typo.
	
2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.hh (check_sane_history): Take an app_state instead of a
	database as an argument.
	* database.cc: Pass an app_state instead of a database as its
	argument. 
	* revision.cc (check_sane_history): Update accordingly.  Add a new
	check for merges, that they are creating consistent changesets
	(even when the common ancestor is outside of the usual
	paranoia-checking search depth).

2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (kluge_for_3_ancestor_nodes): Rename to...
	(kill_redundant_edges): ...this.  Kill all redundant edges, not
	just ones on nodes with 3+ parents.  Also, make it actually work.
	
2005-03-05  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (kluge_for_3_ancestor_nodes): New method.
	(rebuild_ancestry): Call it.

2005-03-03  Nathaniel Smith  <njs@codesourcery.com>

	* revision.cc (check_sane_history): Print a warning to let the
	user know why things like 'pull' can take so long.