@@ -482,3 +482,4 @@ m4_include(tests/t_can_execute.at)
 m4_include(tests/t_diff_binary.at)
 m4_include(tests/t_command_completion.at)
 m4_include(tests/t_merge_rename_file_and_rename_dir.at)
+m4_include(tests/t_diff_restrict.at)
